# smart-task-manager-api

./: .gitignore  README.md  pyproject.toml
app/: main.py  models.py
app/routes/: tasks.py
app/services/: task_services.py
app/templates/: index.html
tests/: test_tasks.py
