[project]
name = "redi-s26-lesson9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "uvicorn>=0.44.0",
    "jinja2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

